--- a/views/results.erb
+++ b/views/results.erb
@@ -1,46 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input action="results" class="form-control mr-sm-2" name="book" type="Search" placeholder="Search" aria-label="Search" method="get">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
 
-<h1 class='main-header'>Welcome to the Bank of Knowledge</h1>
 <div class="book-search">
-  <p><%=@bookResult%></p>
-  <p><%=@bookTitle%></p>
-  <p><%=@bookAuthor%></p>
-  <p><%=@bookID%></p>
-  <p><%=@bookISNB%></p>
-  <img src="<%=@bookImage%>" alt="">
+  <div class="book-wrapper">
+
+    <p><span>Book Name:</span> <%=@bookTitle%></p>
+    <p><span>Author Name:</span> <%=@bookAuthor%></p>
+    <p><span>Book ID:</span> <%=@bookID%></p>
+    <p><span>Book ISBN:</span> <%=@bookISBN%></p>
+    <img class='book-img' src=" <%=@bookImage%>" alt="">
+  </div>
 
 </div>
