--- a/views/results.erb
+++ b/views/results.erb
@@ -1,13 +1,14 @@
 
 
 <div class="book-search">
+  <h3 id='bookTitle'><%=@bookTitle%></h3>
   <div class="book-wrapper">
 
-    <p><span>Book Name:</span> <%=@bookTitle%></p>
     <p><span>Author Name:</span> <%=@bookAuthor%></p>
     <p><span>Book ID:</span> <%=@bookID%></p>
     <p><span>Book ISBN:</span> <%=@bookISBN%></p>
-    <img class='book-img' src=" <%=@bookImage%>" alt="">
+    <p><span>Info:</span> <%=@bookISBN%></p>
   </div>
 
+  <img class='book-img' src=" <%=@bookImage%>" alt="">
 </div>
