--- a/public/main.css
+++ b/public/main.css
@@ -17,9 +17,8 @@ body {
   margin: 0 auto;
   background: #333;
   width: 50%;
-  height: 600px;
+  height: 400px;
   border-radius: 15px;
-  padding-top: 3rem;
   margin-top: 2rem;
   color: #fff;
 
@@ -42,32 +41,39 @@ span{
 }
 
 .book-wrapper{
-  width: 60%;
+  width: 50%;
   padding-left: 3rem;
+  padding-top: 2rem;
 }
 
 .book-img{
-  width: 21%;
+  width: 59%;
   position: relative;
-  bottom: 18.75rem;
-  left: 37rem;
+  left: 5rem;
+  top: 3rem;
 }
 
 .book-wrapper p{
   margin: 0;
   padding: 6% 0 8% 0;
-  font-size: 22px;
+  font-size: 15px;
 }
 
 .book-wrapper span{
-  font-size: 20px;
+  font-size: 15px;
 }
 
 #bookTitle{
+  color: #fff;
+  padding-top: 3rem;
+  text-shadow: -5px 1px 3px black;
   text-align: center;
-    font-size: 24px;
-    width: 60%;
-    margin: 0 auto;
-    padding-bottom: 2rem;
-    font-weight: bolder;
+  font-weight: bolder;
+}
+
+.theWrapper{
+}
+
+.title{
+  display: inline-block;
 }
