--- a/views/results.erb
+++ b/views/results.erb
@@ -1,6 +1,6 @@
 
 
-<h3 id='bookTitle'><%=@bookTitle%></h3>
+<h3 class='bookTitle'><%=@bookTitle%></h3>
 <div class="book-search row">
 
   <div class="book-wrapper col">
@@ -9,10 +9,37 @@
     <p><span>Book ISBN:</span> <%=@bookISBN%></p>
     <p><span>Info:</span> <%=@bookInfo%></p>
   </div>
-  
+
   <div class="col theWrapper">
 
     <img class='book-img' src=" <%=@bookImage%>" alt="">
   </div>
 
+</div>
+
+<h3 class='bookTitle'>Popular Books</h3>
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="slideShow d-block" src="http://books.google.com/books/content?id=lPeKDQAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=none&source=gbs_api" alt="First slide">
+
+    </div>
+    <div class="carousel-item">
+      <img class="slideShow d-block" src="http://books.google.com/books/content?id=Oj-e_CoI2tQC&printsec=frontcover&img=1&zoom=1&edge=none&source=gbs_api" alt="Second slide">
+
+    </div>
+    <div class="carousel-item">
+      <img class="slideShow d-block" src="http://books.google.com/books/content?id=pShDnvE6sJ0C&printsec=frontcover&img=1&zoom=1&edge=none&source=gbs_api" alt="Third slide">
+
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
